# scoutify

./: .gitignore  README.md
docs/: manual-setup.md
glassdoor_scraper/: pyproject.toml
ratings_scraper/: Dockerfile  app.py  constants.py  pyproject.toml  requirements.txt
ratings_scraper/program/: data.py  ratings.py
ratings_scraper/tests/unit_tests/: test_data.py  test_ratings.py
services/glassdoor_scraper/: Dockerfile  app.py  constants.py  docker-compose.yml  pyproject.toml
services/glassdoor_scraper/src/: driver.py  helpers.py  scraper.py
services/job_boards_scraper/: app.py  constants.py  docker-compose.yml  pyproject.toml
services/job_boards_scraper/src/: driver.py  job_boards.py
services/ratings_scraper/: Dockerfile  app.py  docker-compose.yml
services/ratings_scraper/src/: data.py  driver.py
src/: Dockerfile  app.py  constants.py  docker-compose.yml  pyproject.toml  requirements.txt
src/program/: browser_config.py  data.py  driver.py  parse_test_data.py  ratings.py
src/program/helpers/: logging.py  popups.py
utils/: data.py
utils/scraping/: popups.py
